Adjusted Dockerfile