@@ -19,4 +19,4 @@ RUN mvn clean install
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
 COPY --from=build /app/target/qanary-explanation-service-*.jar qanary-explanation-service.jar
-ENTRYPOINT ["java","-jar","qanary-explanation-service.jar"]
+ENTRYPOINT ["java", "--add-opens", "java.base/java.io=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar","qanary-explanation-service.jar"]
